crates/ruff_python_parser/tests/snapshots/preorder__bytes_literals.snap
---
source: crates/ruff_python_parser/tests/preorder.rs
expression: trace
---
- ModModule
  - StmtExpr
    - ExprBytesLiteral
      - BytesLiteral
      - BytesLiteral
      - BytesLiteral
