crates/ruff_python_parser/tests/snapshots/preorder__class_type_parameters.snap
---
source: crates/ruff_python_parser/tests/preorder.rs
expression: trace
---
- ModModule
  - StmtClassDef
    - TypeParams
      - TypeParamTypeVar
        - ExprName
      - TypeParamTypeVar
      - TypeParamTypeVarTuple
      - TypeParamParamSpec
    - StmtExpr
      - ExprEllipsisLiteral
