crates/ruff_python_parser/tests/snapshots/preorder__compare.snap
---
source: crates/ruff_python_parser/tests/preorder.rs
expression: trace
---
- ModModule
  - StmtExpr
    - ExprCompare
      - ExprNumberLiteral
      - Lt
      - ExprName
      - Lt
      - ExprNumberLiteral
