crates/ruff_python_parser/tests/snapshots/preorder__dict_comprehension.snap
---
source: crates/ruff_python_parser/tests/preorder.rs
expression: trace
---
- ModModule
  - StmtExpr
    - ExprDictComp
      - ExprName
      - ExprBinOp
        - ExprName
        - Pow
        - ExprNumberLiteral
      - Comprehension
        - ExprName
        - ExprName
