crates/ruff_python_parser/tests/snapshots/preorder__f_strings.snap
---
source: crates/ruff_python_parser/tests/preorder.rs
expression: trace
---
- ModModule
  - StmtExpr
    - ExprFString
      - StringLiteral
      - FString
        - FStringLiteralElement
        - FStringExpressionElement
          - ExprName
          - FStringLiteralElement
          - FStringExpressionElement
            - ExprName
          - FStringLiteralElement
        - FStringLiteralElement
