crates/ruff_python_parser/tests/snapshots/preorder__function_arguments.snap
---
source: crates/ruff_python_parser/tests/preorder.rs
expression: trace
---
- ModModule
  - StmtFunctionDef
    - Parameters
      - ParameterWithDefault
        - Parameter
      - ParameterWithDefault
        - Parameter
      - ParameterWithDefault
        - Parameter
      - ParameterWithDefault
        - Parameter
        - ExprNumberLiteral
      - Parameter
      - ParameterWithDefault
        - Parameter
        - ExprNumberLiteral
      - ParameterWithDefault
        - Parameter
        - ExprNumberLiteral
      - Parameter
    - StmtPass
