crates/ruff_python_parser/tests/snapshots/preorder__function_type_parameters.snap
---
source: crates/ruff_python_parser/tests/preorder.rs
expression: trace
---
- ModModule
  - StmtFunctionDef
    - TypeParams
      - TypeParamTypeVar
        - ExprName
      - TypeParamTypeVar
      - TypeParamTypeVarTuple
      - TypeParamParamSpec
    - Parameters
    - StmtExpr
      - ExprEllipsisLiteral
