crates/ruff_python_parser/tests/snapshots/preorder__list_comprehension.snap
---
source: crates/ruff_python_parser/tests/preorder.rs
expression: trace
---
- ModModule
  - StmtExpr
    - ExprListComp
      - ExprName
      - Comprehension
        - ExprName
        - ExprName
