crates/ruff_python_parser/tests/snapshots/preorder__match_class_pattern.snap
---
source: crates/ruff_python_parser/tests/preorder.rs
expression: trace
---
- ModModule
  - StmtMatch
    - ExprName
    - MatchCase
      - PatternMatchClass
        - ExprName
        - PatternArguments
          - PatternMatchValue
            - ExprNumberLiteral
          - PatternMatchValue
            - ExprNumberLiteral
      - StmtExpr
        - ExprEllipsisLiteral
    - MatchCase
      - PatternMatchClass
        - ExprName
        - PatternArguments
          - PatternKeyword
            - PatternMatchValue
              - ExprNumberLiteral
          - PatternKeyword
            - PatternMatchValue
              - ExprNumberLiteral
          - PatternKeyword
            - PatternMatchValue
              - ExprNumberLiteral
      - StmtExpr
        - ExprEllipsisLiteral
