crates/ruff_python_parser/tests/snapshots/preorder__set_comprehension.snap
---
source: crates/ruff_python_parser/tests/preorder.rs
expression: trace
---
- ModModule
  - StmtExpr
    - ExprSetComp
      - ExprName
      - Comprehension
        - ExprName
        - ExprName
